# sparselizard

./: .editorconfig  .env  .gitignore  CITEME  CITEME.txt  CMakeLists.txt  COPYRIGHT  CREDITS  CREDITS.txt  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  README_GET_STARTED.md  circle.geo  create_simulation.sh  credits.txt  docker-compose.yml  external_libs_installer.sh  install_external_libs.sh  linux_external_libs_installer.sh  main.cpp  make_script.sh  run_sparselizard.sh
examples/: CMakeLists.txt  Makefile.example  run.sh  validate.sh
examples/advection-diffusion-stabilization-sandbox-2d/: CMakeLists.txt  main.cpp
examples/amr-1d2d3d/: 2d.geo  2d.msh  3d.geo  CMakeLists.txt  main.cpp
examples/amr-random-criterion-2d/: main.cpp  quad.geo  quad.msh
examples/amr-random-criterion-3d/: cube.geo  cube.msh  main.cpp
examples/amr1d2d3d/: 2d.geo  3d.msh  main.cpp
examples/capacitance-computing/: capacitor.geo  capacitor.msh  main.cpp
examples/circuit-coupling-rlc-discharge/: main.cpp  quad.msh
examples/circuit-coupling-rlc-harmonic/: main.cpp  quad.geo
examples/cmut-collapse-mode-axisymmetry-2d/: CMakeLists.txt  main.cpp
examples/data-saving/: CMakeLists.txt  main.cpp
examples/eigenvalues-damped-elasticity-membrane-3d/: CMakeLists.txt  disk.geo  disk.msh  main.cpp
examples/eigenvalues-elasticity-membrane-3d/: CMakeLists.txt  circle.geo  disk.msh  main.cpp
examples/elasticity-geometric-nonlinearity-eigenvalues-3d/: CMakeLists.txt  disk.geo  disk.msh  main.cpp
examples/elasticity-membrane-3d/: CMakeLists.txt  disk.msh  main.cpp
examples/electric-motor-pmsm-2d/: CMakeLists.txt  main.cpp  pmsm.geo  pmsm.msh  rotor.msh  stator.msh
examples/electric-motor-pmsm-pfem-2d/: CMakeLists.txt  main.cpp
examples/electromagnetic-axisymmetry-2d/: CMakeLists.txt  main.cpp
examples/electromagnetic-waveguide-2d/: CMakeLists.txt  main.cpp  waveguide2D.geo  waveguide2D.msh
examples/electromagnetic-waveguide-3d/: CMakeLists.txt  main.cpp  waveguide3D.geo  waveguide3D.msh
examples/electromagnetic-waveguide-time-resolution-2d/: CMakeLists.txt  main.cpp  main.cpp~  waveguide2D.msh
examples/electromagnetic-waveguide-time-resolution-3d/: CMakeLists.txt  main.cpp  waveguide3D.msh
examples/electromagnetic-waveguide3d/: main.cpp
examples/electrostatics-1d/: CMakeLists.txt  line.geo  line.msh  main.cpp
examples/gmsh-api-link/: CMakeLists.txt  disk.geo  main.cpp
examples/halfwave-dipole-antenna-2d/: CMakeLists.txt  dipoleantenna.geo  dipoleantenna.msh  main.cpp
examples/high-order-interpolations-2d/: CMakeLists.txt  main.cpp  quad.geo  quad.msh
examples/hp-adaptivity-2d3d/: CMakeLists.txt  box.geo  box.msh  main.cpp
examples/magnetic-force-sandbox-axisymmetry-2d/: main.cpp  ring2d.geo  ring2d.msh
examples/magnetodynamics-av-2d/: main.cpp
examples/magnetodynamics-av-induction-3d/: CMakeLists.txt  inductionheating.geo  inductionheating.msh  main.cpp
examples/magnetodynamics-hphi-2d/: main.cpp
examples/magnetodynamics-hv-2d/: main.cpp
examples/magnetostatics-scalar-potential-2d/: CMakeLists.txt  halbacharray.geo  halbacharray.msh  main.cpp
examples/magnetostatics-vector-potential-3d/: CMakeLists.txt  magmesh.geo  magmesh.msh  main.cpp
examples/magnetostatics-vector-potential-saturation-2d/: magsat2d.geo  magsat2d.msh  main.cpp
examples/magnetostriction-2d/: choke.geo  choke.msh  magnetostriction.txt  main.cpp
examples/mesh-editing/: CMakeLists.txt  main.cpp
examples/mesher-extruded-mechanical-structure-3d/: CMakeLists.txt  main.cpp
examples/nonlinear-electro-elasto-acoustic-micromembrane-multiharmonic-2d/: CMakeLists.txt  cmut2d.geo  cmut2d.msh  main.cpp
examples/nonlinear-electro-thermal-heating-3d/: CMakeLists.txt  main.cpp
examples/nonlinear-electroelastic-micromembrane-2d/: CMakeLists.txt  cmut2d.geo  cmut2d.msh  main.cpp
examples/nonlinear-fsi-micropillar-2d/: CMakeLists.txt  fsimicropillar.geo  fsimicropillar.msh  main.cpp
examples/nonlinear-laminarflow-step-2d/: CMakeLists.txt  main.cpp
examples/nonlinear-natural-convection-hpfem-2d/: CMakeLists.txt  main.cpp  natconv.geo  natconv.msh
examples/nonlinear-potentialflow-airfoil-2d/: CMakeLists.txt  airfoil2D.geo  airfoil2D.msh  main.cpp
examples/nonlinear-truss-elasticity-2d/: CMakeLists.txt  main.cpp  truss2d.geo  truss2d.msh
examples/nonlinear-vonkarman-vortex-2d/: CMakeLists.txt  channel.geo  channel.msh  main.cpp
examples/periodic-condition-rotation-3d/: CMakeLists.txt  cmutperiodic.nas  main.cpp
examples/photonic-waveguide-coupling-mode-2d/: CMakeLists.txt  main.cpp  optical_waveguide.geo  optical_waveguide.msh
examples/piezoelectricity-bilayer-3d/: CMakeLists.txt  bilayer.geo  bilayer.msh  main.cpp
examples/piezoresistor-strain-gauge-3d/: CMakeLists.txt  main.cpp
examples/pmut-axisymmetry-2d/: CMakeLists.txt  main.cpp
examples/rc-3d/: CMakeLists.txt  main.cpp  rc.geo  rc.msh
examples/reaction-force-computing/: disk.msh  main.cpp
examples/resistance-computing/: main.cpp
examples/spline-discrete-measured-samples/: CMakeLists.txt  disk.geo  disk.msh  main.cpp  steel-stiffness-temperature.csv
examples/superconductor-3d/: CMakeLists.txt  main.cpp
examples/superconductor-axisymmetry-2d/: CMakeLists.txt  main.cpp  tubeinair.geo  tubeinair.msh
examples/thermoacoustic-elasticity-axisymmetry-2d/: CMakeLists.txt  main.cpp
examples/viscousflow-microvalve-2d/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  config.h.in  densemat.cpp  densemat.h  densematrix.cpp  densematrix.h  element.cpp  element.h  fourier.cpp  fourier.h  harmonic.cpp  harmonic.h  indexmat.cpp  indexmat.h  intdensematrix.cpp  intdensematrix.h  logs.cpp  logs.h  myfft.cpp  myfft.h  mympi.cpp  mympi.h  slexceptions.h  slmpi.cpp  slmpi.h  sparselizard.h  sparselizardbase.h  universe.cpp  universe.h  wallclock.cpp  wallclock.h
src/expression/: expression.cpp  expression.h  integration.cpp  integration.h  oncontext.cpp  oncontext.h  parameter.cpp  parameter.h  parameterselectedregion.cpp  parameterselectedregion.h  port.cpp  port.h  portrelation.cpp  portrelation.h  rawparameter.cpp  (+5 more)
(+382 files in other folders)
