option(BUILD_ALL_EXAMPLES "Build all examples." ON)

add_subdirectory(superconductor-axisymmetry-2d)
add_subdirectory(nonlinear-electroelastic-micromembrane-2d)
add_subdirectory(piezoresistor-strain-gauge-3d)
add_subdirectory(electromagnetic-waveguide-time-resolution-3d)
add_subdirectory(magnetodynamics-av-induction-3d)
add_subdirectory(spline-discrete-measured-samples)
add_subdirectory(cmut-collapse-mode-axisymmetry-2d)
add_subdirectory(elasticity-membrane-3d)
add_subdirectory(magnetostatics-vector-potential-3d)
add_subdirectory(hp-adaptivity-2d3d)
add_subdirectory(rc-3d)
add_subdirectory(piezoelectricity-bilayer-3d)
add_subdirectory(electrostatics-1d)
add_subdirectory(eigenvalues-damped-elasticity-membrane-3d)
add_subdirectory(nonlinear-laminarflow-step-2d)
add_subdirectory(amr-1d2d3d)
add_subdirectory(elasticity-geometric-nonlinearity-eigenvalues-3d)
add_subdirectory(photonic-waveguide-coupling-mode-2d)
add_subdirectory(halfwave-dipole-antenna-2d)
add_subdirectory(gmsh-api-link)
add_subdirectory(nonlinear-potentialflow-airfoil-2d)
add_subdirectory(advection-diffusion-stabilization-sandbox-2d)
add_subdirectory(nonlinear-electro-thermal-heating-3d)
add_subdirectory(eigenvalues-elasticity-membrane-3d)
add_subdirectory(electromagnetic-waveguide-3d)
add_subdirectory(mesher-extruded-mechanical-structure-3d)
add_subdirectory(nonlinear-electro-elasto-acoustic-micromembrane-multiharmonic-2d)
add_subdirectory(electromagnetic-waveguide-time-resolution-2d)
add_subdirectory(periodic-condition-rotation-3d)
add_subdirectory(data-saving)
add_subdirectory(pmut-axisymmetry-2d)
add_subdirectory(nonlinear-truss-elasticity-2d)
add_subdirectory(electric-motor-pmsm-2d)
add_subdirectory(magnetostatics-scalar-potential-2d)
add_subdirectory(electromagnetic-axisymmetry-2d)
add_subdirectory(viscousflow-microvalve-2d)
add_subdirectory(nonlinear-vonkarman-vortex-2d)
add_subdirectory(high-order-interpolations-2d)
add_subdirectory(electromagnetic-waveguide-2d)
add_subdirectory(mesh-editing)
add_subdirectory(nonlinear-natural-convection-hpfem-2d)
add_subdirectory(electric-motor-pmsm-pfem-2d)
add_subdirectory(nonlinear-fsi-micropillar-2d)
add_subdirectory(superconductor-3d)
add_subdirectory(thermoacoustic-elasticity-axisymmetry-2d)

