option(BUILD_ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D "Build example ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D." OFF)
if(BUILD_ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D sparselizard)
  custom_copy_file(ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ADVECTION_DIFFUSION_STABILIZATION_SANDBOX_2D OR BUILD_ALL_EXAMPLES)
