option(BUILD_CMUT_COLLAPSE_MODE_AXISYMMETRY_2D "Build example CMUT_COLLAPSE_MODE_AXISYMMETRY_2D." OFF)
if(BUILD_CMUT_COLLAPSE_MODE_AXISYMMETRY_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(CMUT_COLLAPSE_MODE_AXISYMMETRY_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(CMUT_COLLAPSE_MODE_AXISYMMETRY_2D sparselizard)
  custom_copy_file(CMUT_COLLAPSE_MODE_AXISYMMETRY_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_CMUT_COLLAPSE_MODE_AXISYMMETRY_2D OR BUILD_ALL_EXAMPLES)
