option(BUILD_EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D "Build example EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D." OFF)
if(BUILD_EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D sparselizard)
  custom_copy_file(EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_EIGENVALUES_DAMPED_ELASTICITY_MEMBRANE_3D OR BUILD_ALL_EXAMPLES)
