option(BUILD_ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D "Build example ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D." OFF)
if(BUILD_ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D sparselizard)
  custom_copy_file(ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ELASTICITY_GEOMETRIC_NONLINEARITY_EIGENVALUES_3D OR BUILD_ALL_EXAMPLES)
