option(BUILD_ELECTRIC_MOTOR_PMSM_PFEM_2D "Build example ELECTRIC_MOTOR_PMSM_PFEM_2D." OFF)
if(BUILD_ELECTRIC_MOTOR_PMSM_PFEM_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ELECTRIC_MOTOR_PMSM_PFEM_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ELECTRIC_MOTOR_PMSM_PFEM_2D sparselizard)
  custom_copy_file(ELECTRIC_MOTOR_PMSM_PFEM_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ELECTRIC_MOTOR_PMSM_PFEM_2D OR BUILD_ALL_EXAMPLES)
