option(BUILD_ELECTROMAGNETIC_AXISYMMETRY_2D "Build example ELECTROMAGNETIC_AXISYMMETRY_2D." OFF)
if(BUILD_ELECTROMAGNETIC_AXISYMMETRY_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ELECTROMAGNETIC_AXISYMMETRY_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ELECTROMAGNETIC_AXISYMMETRY_2D sparselizard)
  custom_copy_file(ELECTROMAGNETIC_AXISYMMETRY_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ELECTROMAGNETIC_AXISYMMETRY_2D OR BUILD_ALL_EXAMPLES)
