option(BUILD_ELECTROMAGNETIC_WAVEGUIDE_3D "Build example ELECTROMAGNETIC_WAVEGUIDE_3D." OFF)
if(BUILD_ELECTROMAGNETIC_WAVEGUIDE_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ELECTROMAGNETIC_WAVEGUIDE_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ELECTROMAGNETIC_WAVEGUIDE_3D sparselizard)
  custom_copy_file(ELECTROMAGNETIC_WAVEGUIDE_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ELECTROMAGNETIC_WAVEGUIDE_3D OR BUILD_ALL_EXAMPLES)
