option(BUILD_ELECTROSTATICS_1D "Build example ELECTROSTATICS_1D." OFF)
if(BUILD_ELECTROSTATICS_1D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(ELECTROSTATICS_1D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(ELECTROSTATICS_1D sparselizard)
  custom_copy_file(ELECTROSTATICS_1D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_ELECTROSTATICS_1D OR BUILD_ALL_EXAMPLES)
