option(BUILD_HALFWAVE_DIPOLE_ANTENNA_2D "Build example HALFWAVE_DIPOLE_ANTENNA_2D." OFF)
if(BUILD_HALFWAVE_DIPOLE_ANTENNA_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(HALFWAVE_DIPOLE_ANTENNA_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(HALFWAVE_DIPOLE_ANTENNA_2D sparselizard)
  custom_copy_file(HALFWAVE_DIPOLE_ANTENNA_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_HALFWAVE_DIPOLE_ANTENNA_2D OR BUILD_ALL_EXAMPLES)
