option(BUILD_HIGH_ORDER_INTERPOLATIONS_2D "Build example HIGH_ORDER_INTERPOLATIONS_2D." OFF)
if(BUILD_HIGH_ORDER_INTERPOLATIONS_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(HIGH_ORDER_INTERPOLATIONS_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(HIGH_ORDER_INTERPOLATIONS_2D sparselizard)
  custom_copy_file(HIGH_ORDER_INTERPOLATIONS_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_HIGH_ORDER_INTERPOLATIONS_2D OR BUILD_ALL_EXAMPLES)
