option(BUILD_HP_ADAPTIVITY_2D3D "Build example HP_ADAPTIVITY_2D3D." OFF)
if(BUILD_HP_ADAPTIVITY_2D3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(HP_ADAPTIVITY_2D3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(HP_ADAPTIVITY_2D3D sparselizard)
  custom_copy_file(HP_ADAPTIVITY_2D3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_HP_ADAPTIVITY_2D3D OR BUILD_ALL_EXAMPLES)
