option(BUILD_MAGNETODYNAMICS_AV_INDUCTION_3D "Build example MAGNETODYNAMICS_AV_INDUCTION_3D." OFF)
if(BUILD_MAGNETODYNAMICS_AV_INDUCTION_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(MAGNETODYNAMICS_AV_INDUCTION_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(MAGNETODYNAMICS_AV_INDUCTION_3D sparselizard)
  custom_copy_file(MAGNETODYNAMICS_AV_INDUCTION_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_MAGNETODYNAMICS_AV_INDUCTION_3D OR BUILD_ALL_EXAMPLES)
