option(BUILD_MAGNETOSTATICS_SCALAR_POTENTIAL_2D "Build example MAGNETOSTATICS_SCALAR_POTENTIAL_2D." OFF)
if(BUILD_MAGNETOSTATICS_SCALAR_POTENTIAL_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(MAGNETOSTATICS_SCALAR_POTENTIAL_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(MAGNETOSTATICS_SCALAR_POTENTIAL_2D sparselizard)
  custom_copy_file(MAGNETOSTATICS_SCALAR_POTENTIAL_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_MAGNETOSTATICS_SCALAR_POTENTIAL_2D OR BUILD_ALL_EXAMPLES)
