option(BUILD_MAGNETOSTATICS_VECTOR_POTENTIAL_3D "Build example MAGNETOSTATICS_VECTOR_POTENTIAL_3D." OFF)
if(BUILD_MAGNETOSTATICS_VECTOR_POTENTIAL_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(MAGNETOSTATICS_VECTOR_POTENTIAL_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(MAGNETOSTATICS_VECTOR_POTENTIAL_3D sparselizard)
  custom_copy_file(MAGNETOSTATICS_VECTOR_POTENTIAL_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_MAGNETOSTATICS_VECTOR_POTENTIAL_3D OR BUILD_ALL_EXAMPLES)
