option(BUILD_MESH_EDITING "Build example MESH_EDITING." OFF)
if(BUILD_MESH_EDITING OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(MESH_EDITING ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(MESH_EDITING sparselizard)
  custom_copy_file(MESH_EDITING ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_MESH_EDITING OR BUILD_ALL_EXAMPLES)
