option(BUILD_MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D "Build example MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D." OFF)
if(BUILD_MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D sparselizard)
  custom_copy_file(MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_MESHER_EXTRUDED_MECHANICAL_STRUCTURE_3D OR BUILD_ALL_EXAMPLES)
