option(BUILD_NONLINEAR_ELECTRO_THERMAL_HEATING_3D "Build example NONLINEAR_ELECTRO_THERMAL_HEATING_3D." OFF)
if(BUILD_NONLINEAR_ELECTRO_THERMAL_HEATING_3D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(NONLINEAR_ELECTRO_THERMAL_HEATING_3D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(NONLINEAR_ELECTRO_THERMAL_HEATING_3D sparselizard)
  custom_copy_file(NONLINEAR_ELECTRO_THERMAL_HEATING_3D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_NONLINEAR_ELECTRO_THERMAL_HEATING_3D OR BUILD_ALL_EXAMPLES)
