option(BUILD_NONLINEAR_FSI_MICROPILLAR_2D "Build example NONLINEAR_FSI_MICROPILLAR_2D." OFF)
if(BUILD_NONLINEAR_FSI_MICROPILLAR_2D OR BUILD_ALL_EXAMPLES)
  custom_add_executable_from_dir(NONLINEAR_FSI_MICROPILLAR_2D ${CMAKE_CURRENT_SOURCE_DIR})
  target_link_libraries(NONLINEAR_FSI_MICROPILLAR_2D sparselizard)
  custom_copy_file(NONLINEAR_FSI_MICROPILLAR_2D ${CMAKE_CURRENT_SOURCE_DIR} "*.msh;*.geo")
endif(BUILD_NONLINEAR_FSI_MICROPILLAR_2D OR BUILD_ALL_EXAMPLES)
